Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78744

qmlplugindump ignores base classes of QML files registered as components

XMLWordPrintable

    • c734eb3a8bda3b24721d80c380189c5e754a9b38 (qt/qtdeclarative/5.14)

      As can be seen in https://codereview.qt-project.org/c/qt/qtvirtualkeyboard/+/275021 and https://codereview.qt-project.org/c/qt/qtquickcontrols/+/275025 qmlplugindump considers all components derived from Item as having the prototype "QObject" and repeats all the properties from QQuickItem in each of them.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes